# druida_proof_of_concept

./: FirstApproach.ipynb  GAN_testing.ipynb  NN_validation.ipynb  Untitled.ipynb
.ipynb_checkpoints/: FirstApproach-checkpoint.ipynb  GAN_testing-checkpoint.ipynb  NN_api_testing-checkpoint.ipynb  NN_validation-checkpoint.ipynb
Druida_POC/: README.md  pyproject.toml  requirements.txt
Druida_POC/Data/: model_date_batch.csv  model_date_batch.xlsx  pima-indians-diabetes.csv
Druida_POC/Data/.ipynb_checkpoints/: model_date_batch-checkpoint.csv
Druida_POC/src/druida/: NN.py  Stack.py
Druida_POC/src/druida/.ipynb_checkpoints/: setup-checkpoint.py
Druida_POC/src/druida/DataManager/: datamanager.py
Druida_POC/src/druida/atom/: builder.py  notes.txt
Druida_POC/src/druida/surface/: metasurface.py
GenerativeTestCode/Codigos/: DCGAN_Predict.py  DCGAN_Train.py  MIE-DIE820 - Proyecto final  training_log.txt
GenerativeTestCode/Codigos/Utilities/: SaveAnimation.py
