[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "druida"
version = "0.0.1"
authors = [
  { name="Jorge Cardenas", email="jorge.cardenas.l@mail.pucv.cl" },
]
description = "Metasurface-design artificial intelligence"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
